# os2mo-data-import-and-export

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Deploy_to_azure.sh  Dockerfile  README.md  README.rst  RELEASE.md  constants.py  crontab  customer_settings.py  docker-compose.debug.yml  docker-compose.yml  kwp_test_res  merged.txt  merged_git.txt  metacli.py  pyproject.toml  refresh_all.py  release.md  requirements.txt  setup.py  test_case.py
exporters/os2rollekatalog/: README.rst  bulk-api.py  config.py  os2rollekatalog_integration.py  pyproject.toml  requirements.txt  titles.py
exporters/os2rollekatalog/os2rollekatalog/: os2rollekatalog_integration.py  titles.py
exporters/os2rollekatalog/tests/: test_employee.py  test_positions.py  test_titles.py  test_units.py
exporters/os2sync_export/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  os2sync_requests.txt  pyproject.toml  readme.md  readme.rst
exporters/os2sync_export/old_tests/: test_ekvivalens.py
exporters/os2sync_export/os2sync_export/: __main__.py  cleanup_mo_uuids.py  config.py  delete_user.py  fix_fkorg_duplicated_positions.py  lcdb_os2mo.py  main.py  os2mo.py  os2sync.py  os2sync_models.py  os2synccli.py  priority_by_class.py  readme.rst  stub.py  templates.py
exporters/os2sync_export/tests/: conftest.py  helpers.py  test_ad_as_bvn.py  test_address_type_conversions.py  test_cleanup_mo_uuids.py  test_config.py  test_get_sts_orgunit.py  test_get_sts_user.py  test_graphql.py  test_lcdb.py  test_lcdb_ad_as_bvn.py  test_lcdb_get_sts_user.py  test_os2mo.py  test_os2sync.py  test_os2sync_export.py  test_os2sync_payloads.py  test_person_conversions.py  test_uuid_from_it_system.py
exporters/sql_export/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.rst  __init__.py  alembic.ini  config.py  copy_db.py  depends.py  docker-compose.yaml  equivalence_test.py  flake.nix  gql_lora_cache_async.py  init-databases.sql  lc_for_jobs_db.py  lora_cache.py  lora_gql_equivalence_tester.py  main.py  old_lora_cache.py  pyproject.toml  queries.graphql  requirements.txt  schema.graphql  sql_export.py  sql_table_defs.py  sql_table_defs_external.py  sql_table_defs_historic.py  sql_url.py  start.sh  trigger.py  xlsx_exporter.py
exporters/sql_export/alembic/: README  env.py  script.py.mako
exporters/sql_export/autogenerated_graphql_client/: __init__.py  addresses.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  input_types.py  query_engagements.py  scalars.py
exporters/sql_export/equivalence_test/: equivalence_test.py  gql_lora_cache_async.py  log.py
exporters/sql_export/sql_export/: gql_lora_cache_async.py  gql_lora_cache_equivalence_test.py  lc_for_jobs_db.py  lora_cache.py  main.py  old_lora_cache.py  sql_export.py  sql_table_defs.py  start.sh  trigger.py
exporters/sql_export/test_gql_transition/: test_units.py
exporters/sql_export/tests/: conftest.py  requirements.txt  test_engine.py  test_equivalence.py  test_gql_lora_cache.py  test_gql_lora_cache_engagements.py  test_gql_lora_cache_equivalence.py  test_gql_queries.py  test_lora_cache.py  test_main.py  test_resolve_dar.py  test_sql_export.py  test_sql_export_extensions.py  test_sql_url.py
exporters/sql_exporter/: .gitlab-ci.yml  cache.py  classes.py  data_handlers.py  docker-compose.yaml  equvivalence_test.py  pyproject.toml  settings.py  utils.py
exporters/sql_exporter/test_resources/: old_lora_cache.py
exporters/viborg_eksterne/: pyproject.toml  viborg_eksterne.py  viborg_eksterne_lc.py
exporters/viborg_eksterne/tests/: test_viborg_eksterne.py
integrations/SD_Lon/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.sdtool  README.md  README.rst  alembic.ini  calculate_primary.py  config.py  convert.py  date_utils.py  db.py  db_overview.py  docker-compose.yaml  engagement.py  exceptions.py  fix_departments.py  fix_departments_currently_unsed_code.py  main.py  models.py  mora_helpers.py  pyproject.toml  readme.txt  requirements.txt  sd-mox-listen.py  sd-mox.py  sd.py  sd_changed_at.py  sd_cli.py  sd_common.py  sd_fix_departments.py  sd_fixup.py  sd_importer.py  sd_log_analyzer.py  sd_logging.py  sd_mox.py  sd_mox_listen.py  sd_mox_payloads.py  sd_payloads.py  (+6 more)
integrations/SD_Lon/SDConnector/: README.md  sd_connector.py  setup.py
integrations/SD_Lon/alembic/: env.py  (+1 more)
os2mo-admin/: main.py  pyproject.toml
os2mo-admin/handlers/: purge_addresses.py  purge_itusers.py  refresher.py
os2mo_data_import/: README.rst  example.py  import_example.py  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  util.py
os2mo_data_import/Clients/: util.py
os2mo_data_import/MoClient/: client.py  default_mo.py  model.py
os2mo_data_import/fixture_generator/: 825.p  README.rst  dummy_data_creator.py  populate_mo.py
os2mo_data_import/integration_abstraction/: README.rst  __init__.py  integration_abstraction.py
os2mo_data_import/kle/: kle_import.py  payloads.py
os2mo_data_import/long_tests/: integration_test_helpers.py  test_integration_data.py  test_multiple_imports.py
os2mo_data_import/med/: frederikshavn.json  layers.json  med_import.py  mox_helper.py  mox_util.py  payloads.py  requirements.txt  schema.py  seed.json  seed.sh  seed_association_types.sh  utils.py
os2mo_data_import/mox_helpers/: __init__.py  ensure_address_type_names.py  mox_helper.py  mox_util.py  payloads.py  requirements.txt  utils.py
os2mo_data_import/os2mo_data_import/: __init__.py  caching_import.py  defaults.py  helpers.py  mora_data_types.py  mox_data_types.py  utilities.py  utility.py
os2mo_data_import/os2mo_helpers/: mora_helpers.py  requirements.txt  settings.py
os2mo_data_import/sphinx-docs/: conf.py  index.rst
os2mo_data_import/sphinx_docs/: .gitignore  conf.py  index.rst  integration_abstraction.rst
os2mo_data_import/temp_docs/: import_utility.rst  integration_abstraction.rst  os2mo_data_importer.rst
os2mo_data_import/tests/: facet_opret.json  test_dummy_creator.py  test_integration_data_abstraction.py  test_mora_helpers.py
(+736 files in other folders)
