[tool.poetry]
name = "DIPEX"
version = "0.0.0"  # versioning handled by conventional commits
authors = ["Magenta ApS <info@magenta.dk>"]
description = "OS2mo-data-import-and-export"
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["DIPEX", "OS2mo-data-import-and-export"]
include = [
    "poetry/pyproject.toml" , "poetry/poetry.lock"
]
packages = [
    { include = "integrations/*.py" },
    { include = "integrations/**/*.py" },
    { include = "exporters/sql_export/*.py" },
    { include = "exporters/utils/*.py" },
]


[tool.poetry.dev-dependencies]
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"
statistics = "true"
