[tool.poetry]
name = "DIPEX"
version = "0.0.0"  # versioning handled by conventional commits
authors = ["Magenta ApS <info@magenta.dk>"]
description = "OS2mo-data-import-and-export"
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["DIPEX", "OS2mo-data-import-and-export"]
packages = [
    { include = "integrations/*.py" },
    { include = "integrations/**/*.py" },
    { include = "exporters/sql_export/*.py" },
    { include = "exporters/utils/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.3"
anytree = "^2.6.0"
tqdm = "^4.62.0"
more-itertools = "^9.1.0"
pytest = "^7.3.1"
parameterized = "^0.9.0"
hypothesis = "^6.36.1"
Jinja2 = "^3.1"
raclients = "^3.3.3"
tenacity = "^8.0.1"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.31"
pymssql = "^2.2.4"
alembic = "^1.7.5"
mysqlclient = "2.1.1"
pyodbc = "^4.0.32"
types-python-dateutil = "^2.8.9"
Sphinx = "^1.8.4"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
idna = "^3.3"
requests = "^2.21.0"
six = "^1.12.0"
freezegun = "^0.3.11"
pydantic = "^1.8.1"
jsonschema = "^4.4.0"
alabaster = "^0.7.12"
Babel = "^2.6.0"
certifi = "^2022.12.7"
chardet = "^5.1.0"
docutils = "^0.14"
imagesize = "^1.1.0"
MarkupSafe = "^2.1.5"
packaging = "^23.1"
Pygments = "^2.3.1"
pyparsing = "^2.3.1"
snowballstemmer = "^1.2.1"
sphinxcontrib-websupport = "^1.1.0"
pytz = "^2021.3"
XlsxWriter = "^3.0.2"
pandas = "^1.4.0"
black = "^22.3.0"
isort = "5.6.4"
xmltodict = "^0.13.0"
asciitree = "^0.3.3"
mimesis = "^5.3.0"
pytest-aioresponses = "^0.2.0"
pika = "^1.2.0"
requests-kerberos = "^0.14.0"
pywinrm = {extras = ["kerberos"], version = "^0.4.2"}
xlrd = "^2.0.1"
deepdiff = "^5.7.0"
click-option-group = "^0.5.3"
google-cloud-storage = "^2.1.0"
"fs.smbfs" = "^1.0.3"
retrying = "^1.3.3"
alchemy-mock = "^0.4.3"
os2mo-dar-client = "^1"
fastapi = "^0.111.0"
lxml = "^4.7.1"
ramodels = "^19.0.0"
psycopg2-binary = "^2.9.3"
PyYAML = "^6.0"
wheel = "^0.37.1"
jmespath = "^0.10.0"
os2mo-data-import = "^5.4.3"
python-dateutil = "^2.8.2"
glom = "^22.1.0"
Unidecode = "^1.3.5"
ldap3 = "^2.9.1"
paramiko = "^2.8.1"
sentry-sdk = "^1.12.1"
structlog = "^23.1.0"
prometheus-client = "^0.16.0"
ra-utils = "^1.13.7"
mkdocs = "^1.4.2"
aiofiles = "^23.1.0"
iteration-utilities = "^0.11.0"
fastramqpi = "^7.3.6"


[tool.poetry.dev-dependencies]
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"
statistics = "true"
