[tool.poetry]
name = "DIPEX"
version = "0.0.0"  # versioning handled by conventional commits
authors = ["Magenta ApS <info@magenta.dk>"]
description = "OS2mo-data-import-and-export"
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["DIPEX", "OS2mo-data-import-and-export"]
packages = [
    { include = "integrations/*.py" },
    { include = "integrations/**/*.py" },
    { include = "exporters/sql_export/*.py" },
    { include = "exporters/utils/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.3"
anytree = "^2.6.0"
tqdm = "^4.62.0"
more-itertools = "^9.1.0"
pytest = "^8"
parameterized = "^0.9.0"
hypothesis = "^6.36.1"
Jinja2 = "^3"
tenacity = "^8.0.1"
aiohttp = "^3.8.1"
SQLAlchemy = "^2"
pymssql = "^2.2.4"
alembic = "^1.7.5"
mysqlclient = "2.1.1"
pyodbc = "^4.0.32"
types-python-dateutil = "^2.8.9"
idna = "^3.3"
requests = "^2.21.0"
freezegun = "^0.3.11"
pydantic = "^1.8.1"
jsonschema = "^4.4.0"
certifi = "^2022.12.7"
packaging = "^23.1"
pyparsing = "^2.3.1"
pytz = "^2021.3"
XlsxWriter = "^3.0.2"
pandas = "^1"
numpy = "^1"  # pandas doesn't properly pin to numpy==1
xmltodict = "^0.13.0"
asciitree = "^0.3.3"
mimesis = "^5.3.0"
pytest-aioresponses = "^0.2.0"
# remove these two if you use nixos
requests-kerberos = "^0.14.0"
pywinrm = {extras = ["kerberos"], version = "^0.4.2"}
xlrd = "^2.0.1"
deepdiff = "^8"
click-option-group = "^0.5.3"
google-cloud-storage = "^2.1.0"
"fs.smbfs" = "^1.0.3"
retrying = "^1.3.3"
alchemy-mock = "^0.4.3"
fastapi = "^0.115"
lxml = "^4.7.1"
psycopg2-binary = "^2.9.3"
PyYAML = "^6.0"
wheel = "^0.37.1"
jmespath = "^0.10.0"
os2mo-data-import = "^6"
python-dateutil = "^2.8.2"
glom = "^22.1.0"
Unidecode = "^1.3.5"
paramiko = "^2.8.1"
sentry-sdk = "^1.12.1"
structlog = "^24"
prometheus-client = "^0.20"
aiofiles = "^23.1.0"
fastramqpi = "^10.0.7"
pytest-asyncio = "^0.25.3"

[tool.poetry.group.pre-commit.dependencies]
ruff = "^0.9"
mypy = "^1"
types-python-dateutil = "^2"
pre-commit = "^3"
types-requests = "^2"
types-paramiko = "^3"
types-aiofiles = "^24"
types-mock = "^5"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
