[tool.poetry]
name = "os2rollekatalog"
version = "0.1.0"
description = ""
authors = ["Benjamin Lyng Jørgensen <blj@magenta-aps.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.31.0"
more-itertools = "^9.1.0"
ra-utils = "^1.13.9"
raclients = "^3.1.4"
os2mo-data-import = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
parameterized = "^0.9.0"
hypothesis = "^6.79.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
