[tool.poetry]
name = "os2sync_export"
version = "0.1.0"
description = "Integration from OS2mo to OS2Sync"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["os2mo", "dipex", "os2sync"]

[tool.poetry.dependencies]
python = "3.11.*"
dipex = "^4.26.0"
tqdm = "^4.62.0"
more-itertools = "^9.1.0"
Jinja2 = "^2.10"
pydantic = "^1.9.0"
sentry-sdk = "^1.11.1"
setuptools = "^65.6.3"
tenacity = "^8.1.0"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
fastapi = "^0.95.1"
requests = "^2.28.1"  # only used in the old lora cache
retrying = "^1.3.3"  # only used in the old lora cache
click = "^8.1.3"
aiofiles = "^23.1.0"
gql = "^3.4.0"
raclients = "^3.1.4"
parameterized = "^0.9.0"
pytest = "^7.3.1"
lora-utils = {git = "https://github.com/magenta-aps/lora-utils.git", rev = "master"}
ra-utils = {extras = ["prometheus-client"], version = "^1.13.9"}
os2mo-dar-client = "^1.0.1"
prometheus-client = "^0.16.0"
os2mo-data-import = "^5.3.3"
uvicorn = "^0.22.0"
prometheus-fastapi-instrumentator = "^6.0.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
