[tool.poetry]
name = "os2sync_export"
version = "0.1.0"
description = "Integration from OS2mo to OS2Sync"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["os2mo", "dipex", "os2sync"]

[tool.poetry.dependencies]
python = "^3.11.0"
tqdm = "^4.62.0"
more-itertools = "^9.1.0"
click = "^8.0.3"
Jinja2 = "^3.1.2"
ra-utils = {version = "^1.13.7", extras = ["prometheus-client"]}
requests = "^2.21.0"
pydantic = "^1.9.0"
fastapi = "^0.95.2"
uvicorn = "0.17.6"
sentry-sdk = "^1.11.1"
setuptools = "^65.6.3"
tenacity = "^8.1.0"
aiofiles = "^23.1.0"
gql = "^3.4.0"
fastramqpi = "^1.4.2"
raclients = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pre-commit = "^2.18.1"
parameterized = "^0.9.0"
hypothesis = "^6.72.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
