[tool.poetry]
name = "SDLon"
version = "0.1.0"
description = "OS2mo SDLoen integration"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.rst"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["os2mo", "dipex", "sdloen"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"
requests = "^2.27.1"
xmltodict = "^0.12.0"
ra-utils = "^1.0.0"
pydantic = "^1.9.0"
anytree = "^2.8.0"
fastapi = "^0.75.0"
lxml = "^4.8.0"
os2mo-data-import = "^2.22.2"
ramodels = "^5.4.0"
os2mo-dar-client = "^1.0.0"
tqdm = "^4.63.0"
uvicorn = "^0.17.6"
pytest = "6.2.5"
dipex = "^2.37.1"
click = "^8.1.0"
prometheus-fastapi-instrumentator = "^5.7.1"
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.39.3"
black = "^22.1.0"
reorder-python-imports = "^3.0.1"
parameterized = "^0.7.4"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
